2014-10-04  Alan Schmitt <alan.schmitt@polytechnique.org>  (tiny change)

	* lisp/nnimap.el (nnimap-process-expiry-targets): Reverse the list of
	expired messages only when it was built in reverse order.

2014-10-04  Peter Münster <pmlists@free.fr>  (tiny change)

	* gnus-delay.el (gnus-delay-send-queue): Remove `gnus-delay-header'
	last so it can be used in `message-send-hook'.

2014-09-29  Daiki Ueno  <ueno@gnu.org>

	* mml.el (mml-parse-1): Error out if unknown mode is specified in
	<#secure> tag (bug#18513).

2014-09-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* parse-time.el: Require cl when compiling.

2014-09-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	Use cl-lib as much as possible following the 2014-09-26 change
	in the Emacs trunk.
	* parse-time.el: Try requiring cl-lib.
	(parse-time-incf): Alias to cl-incf or incf.
	(digit-char-p): Remove.
	(parse-time-integer): Alias to cl-parse-integer or the one defined.
	(parse-integer): Rename to parse-time-integer.
	(parse-time-tokenize, parse-time-rules, parse-time-string)
	Use parse-time-incf and parse-time-integer.

2014-09-11  Paul Eggert  <eggert@cs.ucla.edu>

	* gnus-cloud.el (gnus-cloud-parse-version-1): Fix misspelling
	of ":delete".

2014-08-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-html-save-cid-content)
	(gnus-article-browse-html-parts):
	Revert last change that breaks links other than cid contents.

2014-08-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-art.el (gnus-article-browse-html-save-cid-content)
	(gnus-article-browse-html-parts): Make cid file names relative.

2014-08-21  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-view.el (mm-display-inline-fontify): Make the working buffer
	temporarily displayed when running a mode function (at least org-mode
	requires it).

2014-08-14  Alan Schmitt  <alan.schmitt@polytechnique.org>

	* gnus-sum.el (gnus-summary-expire-articles): Functions registered to
	the gnus-summary-article-expire-hook should be told where the function