@@ -1,9 +1,14 @@
-2014-10-04  Alan Schmitt <alan.schmitt@polytechnique.org>  (tiny change)
+2014-10-04  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
+
+	* ntlm.el (ntlm-build-auth-request):
+	Add NTLM2 Session support.  (Bug#15603)
+
+2014-10-04  Alan Schmitt  <alan.schmitt@polytechnique.org>  (tiny change)
 
 	* lisp/nnimap.el (nnimap-process-expiry-targets): Reverse the list of
 	expired messages only when it was built in reverse order.
 
-2014-10-04  Peter Münster <pmlists@free.fr>  (tiny change)
+2014-10-04  Peter Münster  <pmlists@free.fr>  (tiny change)
 
 	* gnus-delay.el (gnus-delay-send-queue): Remove `gnus-delay-header'
 	last so it can be used in `message-send-hook'.
